--- a/src/components/PortableTextCmps/PortableTextTitle.astro
+++ b/src/components/PortableTextCmps/PortableTextTitle.astro
@@ -22,7 +22,7 @@ const { node } = Astro.props;
 			flex-direction: column;
 			row-gap: var(--spacer-100);
 			text-wrap: pretty;
-			text-wrap: balance;
+			// text-wrap: balance;
 		}
 		.record-title-baseline {
 			font-weight: 700;
@@ -40,7 +40,7 @@ const { node } = Astro.props;
 			list-style: none;
 			display: flex;
 			flex-flow: row wrap;
-			column-gap: var(--spacer-100);
+			column-gap: var(--spacer-200);
 			row-gap: var(--spacer-100);
 		}
 		.record-tags li {
