--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,11 +2,11 @@
 import Main from "@layouts/Main.astro";
 ---
 
-<Main title="Coming Soon">
+<Main title="Page not found">
 	<div class="content">
 		<div>
 			<p>
-				Coming soon
+				Page not found
 			</p>
 		</div>
 	</div>
