--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -312,7 +312,7 @@ const homepage: HomepageProps = await sanityClient.fetch(HomepageGroqQuery);
 			& {
 				line-height: 1.3;
 				text-wrap: pretty;
-				text-wrap: balance;
+				// text-wrap: balance;
 			}
 			.record-title-baseline {
 				font-weight: 700;
@@ -383,7 +383,7 @@ const homepage: HomepageProps = await sanityClient.fetch(HomepageGroqQuery);
 			min-height: 0;
 			line-height: 1.3;
 			text-wrap: pretty;
-			text-wrap: balance;
+			// text-wrap: balance;
 		}
 		.record-date {
 			order: 1;
