--- a/src/components/PortableTextCmps/PortableTextBlock.astro
+++ b/src/components/PortableTextCmps/PortableTextBlock.astro
@@ -17,6 +17,4 @@ const Cmp =
 	: (Block); // fallback to `astro-portabletext`
 ---
 
-<Cmp {...props}>
-	<slot />
-</Cmp>
+<Cmp {...props}><slot /></Cmp>
