--- a/src/components/PortableTextCmps/PortableTextLink.astro
+++ b/src/components/PortableTextCmps/PortableTextLink.astro
@@ -6,6 +6,4 @@ const { markDef } = Astro.props.node;
 const type = markDef?.type;
 ---
 
-<Link class="link hover-text" {...(((type === "external" && markDef?.externalTarget) && { href: markDef?.externalTarget }) || ((type === "internal" && markDef?.internalTarget) && { to: markDef?.internalTarget }))}>
-	<slot />
-</Link>
+<Link class="link hover-text" {...(((type === "external" && markDef?.externalTarget) && { href: markDef?.externalTarget }) || ((type === "internal" && markDef?.internalTarget) && { to: markDef?.internalTarget }))}><slot /></Link>
