--- a/src/components/RichText.astro
+++ b/src/components/RichText.astro
@@ -6,6 +6,7 @@ import PortableTextImage from "@components/PortableTextCmps/PortableTextImage.as
 import PortableTextEmbed from "@components/PortableTextCmps/PortableTextEmbed.astro";
 import PortableTextDocumentReference from "@components/PortableTextCmps/PortableTextDocumentReference.astro";
 import PortableTextCta from "@components/PortableTextCmps/PortableTextCta.astro";
+import PortableTextEmail from "@components/PortableTextCmps/PortableTextEmail.astro";
 import PortableTextSpacer from "@components/PortableTextCmps/PortableTextSpacer.astro";
 import PortableTextTitle from "@components/PortableTextCmps/PortableTextTitle.astro";
 import PortableTextDescription from "@components/PortableTextCmps/PortableTextDescription.astro";
@@ -18,6 +19,7 @@ const components: SomePortableTextComponents = {
 		embed: PortableTextEmbed,
 		documentReference: PortableTextDocumentReference,
 		cta: PortableTextCta,
+		emailAddress: PortableTextEmail,
 		spacer: PortableTextSpacer,
 		title: PortableTextTitle,
 		description: PortableTextDescription,
@@ -76,7 +78,10 @@ export function portableTextToPlainText(source: string | TypedObject[]) {
 		& {
 			line-height: 1.3;
 			text-wrap: pretty;
-			text-wrap: balance;
+			// text-wrap: balance;
+		}
+		&:empty {
+			display: none;
 		}
 		& + .rich-text {
 			margin-block-start: var(--spacer-100);
@@ -113,29 +118,29 @@ export function portableTextToPlainText(source: string | TypedObject[]) {
 			@include mixins.link();
 			@include mixins.hover-text();
 		}
-		.boxed-area {
-			@media (max-width: 768px) {
-				max-width: 80%;
+		.document-reference, .cta {
+			@media (max-width: 896px) {
+				max-width: 50ch;
 			}
 		}
-		:is(p, .heading, blockquote, .note, ul, ol, figure, .embed-object, .document-header, .document-description, .boxed-area):empty {
+		:is(p, .heading, blockquote, .note, ul, ol, figure, .embed-object, .document-header, .document-description, .document-reference, .cta, .boxed-area):empty {
 			display: none;
 		}
 		:is(p, .heading, blockquote, .note, ul, ol, .document-description) + :is(p, .heading, blockquote, .note, ul, ol, .document-description) {
 			margin-block-start: var(--spacer-100);
 		}
-		:is(figure, .embed-object, .document-header, .boxed-area) + :is(figure, .embed-object, .document-header, .boxed-area),
-		:is(p, .heading, blockquote, .note, ul, ol, .document-description) + :is(figure, .embed-object, .document-header, .boxed-area),
-		:is(figure, .embed-object, .document-header, .boxed-area) + :is(p, .heading, blockquote, .note, ul, ol, .document-description) {
+		:is(figure, .embed-object, .document-header, .document-reference, .cta, .boxed-area) + :is(figure, .embed-object, .document-header, .document-reference, .cta, .boxed-area),
+		:is(p, .heading, blockquote, .note, ul, ol, .document-description) + :is(figure, .embed-object, .document-header, .document-reference, .cta, .boxed-area),
+		:is(figure, .embed-object, .document-header, .document-reference, .cta, .boxed-area) + :is(p, .heading, blockquote, .note, ul, ol, .document-description) {
 			margin-block-start: var(--spacer-400);
 		}
 		@media (max-width: 768px) {
 			.spacer:not(:first-child) + :is(p, .heading, blockquote, .note, ul, ol, .document-description) {
 				margin-block-start: var(--spacer-100);
 			}
-			.spacer:not(:first-child) + :is(figure, .embed-object, .document-header, .boxed-area),
-			:is(p, .heading, blockquote, .note, ul, ol, .document-description) + .spacer + :is(figure, .embed-object, .document-header, .boxed-area),
-			:is(figure, .embed-object, .document-header, .boxed-area) + .spacer + :is(p, .heading, blockquote, .note, ul, ol, .document-description) {
+			.spacer:not(:first-child) + :is(figure, .embed-object, .document-header, .document-reference, .cta, .boxed-area),
+			:is(p, .heading, blockquote, .note, ul, ol, .document-description) + .spacer + :is(figure, .embed-object, .document-header, .document-reference, .cta, .boxed-area),
+			:is(figure, .embed-object, .document-header, .document-reference, .cta, .boxed-area) + .spacer + :is(p, .heading, blockquote, .note, ul, ol, .document-description) {
 				margin-block-start: var(--spacer-400);
 			}
 			.boxed-area + .spacer + .boxed-area {
@@ -146,7 +151,7 @@ export function portableTextToPlainText(source: string | TypedObject[]) {
 			margin-block-start: 0 !important;
 			padding-block-start: var(--spacer-100);
 		}
-		.boxed-area + :is(p, .heading, blockquote, .note, ul, ol, figure, .embed-object, .document-header, .document-description, .boxed-area) {
+		.boxed-area + :is(p, .heading, blockquote, .note, ul, ol, figure, .embed-object, .document-header, .document-description, .document-reference, .cta, .boxed-area) {
 			margin-block-start: calc(var(--spacer-400) + (var(--spacer-100) * 2)) !important;
 		}
 	}
